--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -15,10 +15,9 @@ jobs:
 
     steps:
       - name: Checkout the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_TOKEN }}
 
       - name: Make a daily change
         run: |
@@ -30,7 +29,10 @@ jobs:
           git config --global user.email "mufunyig@gmail.com"
 
       - name: Commit and push
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
           git add activity.log
           git commit -m "🔁 Auto ping at $(date -u)" || echo "No changes to commit"
           git pull --rebase origin main
